добавлен эксперимент nih_repr.yaml

--- a/configs/dataloader/nih.yaml
+++ b/configs/dataloader/nih.yaml
@@ -5,7 +5,7 @@ train:
   dataset:
     _target_: siaug.dataloaders.NIHDataset
     csv_path: ${paths.data_dir}/cxr8/Data_Entry_2017_v2020.csv
-    images_dir: ${paths.data_dir}/cxr8/images
+    images_dir: ${paths.data_dir}/cxr8/images_png
     list_path: ${paths.data_dir}/cxr8/train_val_list.txt
     img_transform: ???
     lbl_transform: null
@@ -15,7 +15,7 @@ valid:
   dataset:
     _target_: siaug.dataloaders.NIHDataset
     csv_path: ${paths.data_dir}/cxr8/Data_Entry_2017_v2020.csv
-    images_dir: ${paths.data_dir}/cxr8/images
+    images_dir: ${paths.data_dir}/cxr8/images_png
     list_path: ${paths.data_dir}/cxr8/test_list.txt
     img_transform: ???
     lbl_transform: null
