--- a/configs/experiment/nih_repr.yaml
+++ b/configs/experiment/nih_repr.yaml
@@ -4,7 +4,7 @@ defaults:
   - override /dataloader: nih.yaml
 
 # general settings
-task_name: ???
+task_name: repr_nih_baseline
 tags: ["${model.backbone}", "repr", "nih"]
 
 # override dataloader settings
@@ -16,11 +16,60 @@ dataloader:
       com_transform:
         _target_: siaug.augmentations.ExtractKeys
         keys: ["img"]
-      img_transform: ???
+      img_transform:
+        _target_: siaug.augmentations.ToSiamese
+        t1:
+          _target_: torchvision.transforms.Compose
+          transforms:
+            - _target_: torchvision.transforms.RandomResizedCrop
+              size: 224
+              scale: [0.2, 1.]
+            - _target_: torchvision.transforms.RandomApply
+              p: 0.8
+              transforms:
+                - _target_: torchvision.transforms.ColorJitter
+                  brightness: 0.4
+                  contrast: 0.4
+                  saturation: 0.4
+                  hue: 0.1
+            - _target_: torchvision.transforms.RandomApply
+              p: 0.5
+              transforms:
+                - _target_: siaug.augmentations.simsiam.GaussianBlur
+                  sigma: [.1, 2.]
+            - _target_: torchvision.transforms.RandomHorizontalFlip
+            - _target_: torchvision.transforms.ToTensor
+            - _target_: torchvision.transforms.Normalize
+              mean: [0.50551915, 0.50551915, 0.50551915]
+              std: [0.2895694, 0.2895694, 0.2895694]
+        t2:
+          _target_: torchvision.transforms.Compose
+          transforms:
+            - _target_: torchvision.transforms.RandomResizedCrop
+              size: 224
+              scale: [0.2, 1.]
+            - _target_: torchvision.transforms.RandomApply
+              p: 0.8
+              transforms:
+                - _target_: torchvision.transforms.ColorJitter
+                  brightness: 0.4
+                  contrast: 0.4
+                  saturation: 0.4
+                  hue: 0.1
+            - _target_: torchvision.transforms.RandomApply
+              p: 0.5
+              transforms:
+                - _target_: siaug.augmentations.simsiam.GaussianBlur
+                  sigma: [.1, 2.]
+            - _target_: torchvision.transforms.RandomHorizontalFlip
+            - _target_: torchvision.transforms.ToTensor
+            - _target_: torchvision.transforms.Normalize
+              mean: [0.50551915, 0.50551915, 0.50551915]
+              std: [0.2895694, 0.2895694, 0.2895694]
   # we're not using a validation set for representation learning
   valid: null
 
 # override model settings
 model:
-  backbone: ???
-  num_channels: 1
+  backbone: resnet50
+  num_channels: 3
