--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ diffusers       # diffusion models from HuggingFace
 timm            # model backbones
 transformers    # text encoders
 zarr            # chunked n-dimensional array storage
-polars          # fast dataframe
+polars-lts-cpu  # fast dataframe
 git+https://github.com/pyvoxel/pyvoxel  # Pyvoxel latest
 kornia          # image augmentations
 accelerate      # huggingface's accelerate to take care of multi-node, multi-gpu
