wandb конфиг поправлен

--- a/configs/logger/wandb.yaml
+++ b/configs/logger/wandb.yaml
@@ -1,5 +1,5 @@
 # project: siaug  # accelerate converts this to "project"
-entity: aimi
+entity: savasova-academic
 id: null
 group: null
 name: ${task_name}
