--- a/configs/experiment/nih_lcls.yaml
+++ b/configs/experiment/nih_lcls.yaml
@@ -52,6 +52,7 @@ model:
   backbone: resnet50
   num_channels: 3
   num_classes: 15
+  # path to the model.safetensors checkpoint
   ckpt_path: ???
 
 # optimizer for linear eval
