--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ kornia          # image augmentations
 accelerate      # huggingface's accelerate to take care of multi-node, multi-gpu
 git+https://github.com/Lightning-AI/metrics.git@release/stable  # metrics
 lightning-bolts # lightning bolts
+safetensors     # safe model weights format
